Mobile Event Preview Cards - Layout Issue

--- a/assets/frontend/mpwem_style.css
+++ b/assets/frontend/mpwem_style.css
@@ -858,7 +858,7 @@ div.mpwem_style [data-bg-image] { background-size: cover; background-repeat: no-
     color: #ff3b3b;
     font-weight: 800;
 }
-.wp-block-group .mep_event_list{min-width:1280px;}
+
 
 
 
